--- a/popup.html
+++ b/popup.html
@@ -42,6 +42,8 @@
             font-weight: 500;
             margin-bottom: 4px;
             color: #1a73e8;
+            word-wrap: break-word;
+            word-break: break-word;
         }
         .id {
             font-family: 'Consolas', 'Monaco', monospace;
