--- a/popup.html
+++ b/popup.html
@@ -60,6 +60,26 @@
             color: #666;
             margin-top: 32px;
         }
+        .id-container {
+            display: flex;
+            align-items: center;
+            gap: 8px;
+        }
+        .copy-btn {
+            background: none;
+            border: none;
+            padding: 4px;
+            cursor: pointer;
+            color: #666;
+            border-radius: 4px;
+        }
+        .copy-btn:hover {
+            background: #eee;
+        }
+        .copy-btn svg {
+            width: 16px;
+            height: 16px;
+        }
     </style>
 </head>
 <body>
@@ -71,5 +91,23 @@
         <div class="empty-state">Waiting for folder data...</div>
     </div>
     <script src="popup.js"></script>
+    <script>
+        document.addEventListener('click', (e) => {
+            if (e.target.closest('.copy-btn')) {
+                const idElement = e.target.closest('.item').querySelector('.id');
+                navigator.clipboard.writeText(idElement.textContent);
+                
+                const btn = e.target.closest('.copy-btn');
+                btn.innerHTML = `<svg xmlns="http://www.w3.org/2000/svg" fill="none" viewBox="0 0 24 24" stroke="currentColor">
+                    <path stroke-linecap="round" stroke-linejoin="round" stroke-width="2" d="M5 13l4 4L19 7" />
+                </svg>`;
+                setTimeout(() => {
+                    btn.innerHTML = `<svg xmlns="http://www.w3.org/2000/svg" fill="none" viewBox="0 0 24 24" stroke="currentColor">
+                        <path stroke-linecap="round" stroke-linejoin="round" stroke-width="2" d="M8 5H6a2 2 0 00-2 2v12a2 2 0 002 2h10a2 2 0 002-2v-1M8 5a2 2 0 002 2h2a2 2 0 002-2M8 5a2 2 0 012-2h2a2 2 0 012 2m0 0h2a2 2 0 012 2v3m2 4H10m0 0l3-3m-3 3l3 3" />
+                    </svg>`;
+                }, 1000);
+            }
+        });
+    </script>
 </body>
 </html> 
